# shard

./: README.md
compiler/: CMakeLists.txt
compiler/src/: main.cpp
compiler/src/codegen/: codegen.cpp
compiler/src/diagnostic/: diagnostic.cpp
compiler/src/include/: common.h  position.h
compiler/src/include/codegen/: codegen.h
compiler/src/include/diagnostic/: codes_msg_table.h  diag_part.h  diagnostic.h  level.h
compiler/src/include/lexer/: keywords.h  lexer.h  token.h  token_kind.h
compiler/src/include/parser/: ast.h  parser.h
compiler/src/include/sema/: sema.h
compiler/src/include/type_checker/: type_checker.h
compiler/src/lexer/: lexer.cpp
compiler/src/parser/: parser.cpp
compiler/src/sema/: sema.cpp
compiler/src/type_checker/: type_checker.cpp
docs/errors/: E0000.md  E0001.md  E0002.md  E0003.md  E0004.md  E0005.md  E0006.md  E0007.md  E0008.md  E0009.md  E0010.md  E0011.md  E0012.md  E0013.md  E0014.md  E0015.md  E0016.md  E0017.md  E0018.md  E0020.md  E0022.md  E0023.md  E0024.md  E0025.md  E0026.md  E0027.md  E0028.md  E0029.md  E0030.md  E0031.md  E0032.md  E0033.md  E0034.md  E0036.md  E0037.md  E0038.md  E0039.md  E0040.md  E0041.md  E0042.md
docs/warnings/: W0000.md
